--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.9.4",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "vite-plugin-windicss": "^1.7.0"
   },
   "type": "module"
 }
