--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spawnexactdino",
+  "name": "arkutils-website",
   "version": "0.0.1",
   "scripts": {
     "dev": "svelte-kit dev",
@@ -15,8 +15,8 @@
   "devDependencies": {
     "@commitlint/cli": "^16.1.0",
     "@commitlint/config-conventional": "^16.0.0",
-    "@sveltejs/adapter-auto": "next",
-    "@sveltejs/kit": "next",
+    "@sveltejs/adapter-auto": "1.0.0-next.17",
+    "@sveltejs/kit": "1.0.0-next.324",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "eslint": "^7.32.0",
@@ -25,9 +25,9 @@
     "husky": "^7.0.4",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.2.6",
-    "svelte-preprocess": "^4.9.4",
+    "svelte": "^3.47.0",
+    "svelte-check": "^2.7.0",
+    "svelte-preprocess": "^4.10.6",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3",
     "vite-plugin-windicss": "^1.7.0"
@@ -38,8 +38,15 @@
       "@commitlint/config-conventional"
     ],
     "rules": {
-      "body-leading-blank": [ 2, "always" ],
-      "body-max-line-length": [ 0, "never", 10000 ]
+      "body-leading-blank": [
+        2,
+        "always"
+      ],
+      "body-max-line-length": [
+        0,
+        "never",
+        10000
+      ]
     }
   }
 }
