--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@commitlint/cli": "^16.1.0",
     "@commitlint/config-conventional": "^16.0.0",
-    "@sveltejs/adapter-auto": "1.0.0-next.17",
+    "@sveltejs/adapter-auto": "^1.0.0-next.40",
     "@sveltejs/kit": "1.0.0-next.324",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
