--- a/package.json
+++ b/package.json
@@ -2,21 +2,21 @@
   "name": "arkutils-website",
   "version": "0.0.1",
   "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
+    "dev": "vite dev",
+    "build": "vite build",
     "package": "svelte-kit package",
-    "preview": "svelte-kit preview",
+    "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-    "prepare": "husky install"
+    "lint": "prettier --check --plugin-search-dir=. . && eslint .",
+    "format": "prettier --write --plugin-search-dir=. .",
+    "prepare": "husky install && svelte-kit sync"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.1.0",
     "@commitlint/config-conventional": "^16.0.0",
-    "@sveltejs/adapter-auto": "^1.0.0-next.40",
-    "@sveltejs/kit": "1.0.0-next.324",
+    "@sveltejs/adapter-auto": "^1.0.0-next.55",
+    "@sveltejs/kit": "1.0.0-next.370",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "daisyui": "^2.19.0",
@@ -31,6 +31,7 @@
     "svelte-preprocess": "^4.10.6",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3",
+    "vite": "^2.9.14",
     "vite-plugin-windicss": "^1.7.0"
   },
   "type": "module",
