--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "svelte-preprocess": "^4.10.6",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3",
-    "vite": "^2.9.14",
-    "vite-plugin-windicss": "^1.7.0"
+    "vite": "^2.9.14"
   },
   "type": "module",
   "commitlint": {
