--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check --plugin-search-dir=. . && eslint .",
     "format": "prettier --write --plugin-search-dir=. .",
-    "prepare": "husky install && svelte-kit sync"
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.1.0",
     "@commitlint/config-conventional": "^16.0.0",
     "@square/svelte-store": "^0.1.5",
-    "@sveltejs/adapter-auto": "^1.0.0-next.64",
-    "@sveltejs/kit": "1.0.0-next.396",
+    "@sveltejs/adapter-auto": "next",
+    "@sveltejs/kit": "1.0.0-next.405",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "autoprefixer": "^10.4.7",
-    "daisyui": "^2.19.0",
+    "daisyui": "^2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-square-svelte-store": "^1.0.0",
