--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@commitlint/config-conventional": "^16.0.0",
     "@square/svelte-store": "^0.1.5",
     "@sveltejs/adapter-auto": "next",
-    "@sveltejs/kit": "1.0.0-next.405",
+    "@sveltejs/kit": "next",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "autoprefixer": "^10.4.7",
@@ -37,7 +37,7 @@
     "tailwindcss": "^3.1.5",
     "tslib": "^2.3.1",
     "typescript": "^4",
-    "vite": "^3"
+    "vite": "^3.1.0-beta.1"
   },
   "type": "module",
   "engines": {
