--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         }
     },
     "[svelte]": {
+        "editor.defaultFormatter": "svelte.svelte-vscode",
         "editor.formatOnSave": true,
         "editor.codeActionsOnSave": {
             "source.organizeImports": true,
@@ -43,6 +44,7 @@
         "Mults",
         "Skoll",
         "Steinbjorn",
+        "sveltejs",
         "Unsubscriber",
         "Valguero"
     ]
