feat(bosses): handle King Titan's loot crate

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,6 +38,7 @@
         "Fenrisúlfr",
         "Fjordur",
         "Hati",
+        "Kaiju",
         "Lysrix",
         "Megapithicus",
         "modid",
