chore: update packages and silence new Svelte warnings

--- a/package.json
+++ b/package.json
@@ -13,31 +13,31 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@commitlint/cli": "^16.1.0",
-    "@commitlint/config-conventional": "^16.0.0",
-    "@square/svelte-store": "^0.1.5",
-    "@sveltejs/adapter-auto": "next",
-    "@sveltejs/kit": "next",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "@typescript-eslint/parser": "^5.10.1",
-    "autoprefixer": "^10.4.7",
+    "@commitlint/cli": "^16",
+    "@commitlint/config-conventional": "^16",
+    "@square/svelte-store": "^0",
+    "@sveltejs/adapter-auto": "^1",
+    "@sveltejs/kit": "^1",
+    "@typescript-eslint/eslint-plugin": "^5",
+    "@typescript-eslint/parser": "^5",
+    "autoprefixer": "^10",
     "daisyui": "^2",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-square-svelte-store": "^1.0.0",
-    "eslint-plugin-svelte3": "^3.2.1",
-    "husky": "^7.0.4",
-    "postcss": "^8.4.14",
-    "postcss-load-config": "^4.0.1",
-    "prettier": "^2.4.1",
-    "prettier-plugin-svelte": "^2.4.0",
-    "svelte": "^3.47.0",
-    "svelte-check": "^2.7.0",
-    "svelte-preprocess": "^4.10.7",
-    "tailwindcss": "^3.1.5",
-    "tslib": "^2.3.1",
+    "eslint": "^7",
+    "eslint-config-prettier": "^8",
+    "eslint-plugin-square-svelte-store": "^1",
+    "eslint-plugin-svelte3": "^3",
+    "husky": "^7",
+    "postcss": "^8",
+    "postcss-load-config": "^4",
+    "prettier": "^2",
+    "prettier-plugin-svelte": "^2",
+    "svelte": "^3",
+    "svelte-check": "^2",
+    "svelte-preprocess": "^4",
+    "tailwindcss": "^3",
+    "tslib": "^2",
     "typescript": "^4",
-    "vite": "^3.1.0-beta.1"
+    "vite": "^4"
   },
   "type": "module",
   "engines": {
