chore: improve VSCode terminal file linking

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,5 +48,6 @@
         "sveltejs",
         "Unsubscriber",
         "Valguero"
-    ]
+    ],
+    "terminal.integrated.wordSeparators": " []{}',\"`─‘’"
 }
