--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
     "cSpell.words": [
         "arkutils",
         "Beyla",
+        "Bossopedia",
         "Cryopod",
         "Dinos",
         "dont",
