--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,7 @@
         "Megapithicus",
         "modid",
         "Mults",
+        "PVPVE",
         "Skoll",
         "Steinbjorn",
         "sveltejs",
