chore(downloads): add link to Tiia's article

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,7 @@
         "Skoll",
         "Steinbjorn",
         "sveltejs",
+        "Tiia",
         "Unsubscriber",
         "Valguero"
     ],
