feat(howmanyfemales): add support for Traits

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,6 +45,7 @@
         "modid",
         "Mults",
         "PVPVE",
+        "Robusts",
         "Skoll",
         "Steinbjorn",
         "sveltejs",
