--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-    "package": "svelte-kit package",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check --plugin-search-dir=. . && eslint .",
     "format": "prettier --write --plugin-search-dir=. .",
     "prepare": "husky install"
@@ -16,28 +15,31 @@
     "@commitlint/cli": "^17.7.2",
     "@commitlint/config-conventional": "^17",
     "@square/svelte-store": "^0",
-    "@sveltejs/adapter-auto": "^1",
-    "@sveltejs/kit": "^1",
-    "@typescript-eslint/eslint-plugin": "^5",
-    "@typescript-eslint/parser": "^5",
+    "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^8",
+    "@typescript-eslint/parser": "^8",
     "autoprefixer": "^10",
     "daisyui": "^2",
-    "eslint": "^7",
-    "eslint-config-prettier": "^8",
+    "eslint": "^9.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-square-svelte-store": "^1",
-    "eslint-plugin-svelte3": "^3",
+    "eslint-plugin-svelte": "^2.36.0",
     "husky": "^7",
     "postcss": "^8",
-    "postcss-load-config": "^4",
-    "prettier": "^2",
-    "prettier-plugin-svelte": "^2",
-    "svelte": "^3",
-    "svelte-check": "^2",
-    "svelte-preprocess": "^4",
+    "postcss-load-config": "^6",
+    "prettier": "^3.1.1",
+    "prettier-plugin-svelte": "^3.1.2",
+    "svelte": "^4.2.7",
+    "svelte-check": "^4.0.0",
     "tailwindcss": "^3",
     "tslib": "^2",
-    "typescript": "^4",
-    "vite": "^4.4.12"
+    "@types/eslint": "^9.6.0",
+    "globals": "^15.0.0",
+    "typescript": "^5.0.0",
+    "typescript-eslint": "^8.0.0",
+    "vite": "^5.0.3"
   },
   "type": "module",
   "engines": {
