--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   },
   "type": "module",
   "engines": {
-    "node": ">=16.9.0"
+    "node": "^20.9.0"
   },
   "commitlint": {
     "extends": [
